--- a/src/pages/Admin/Login/Login.scss
+++ b/src/pages/Admin/Login/Login.scss
@@ -13,6 +13,12 @@
         }
     }
 
+    label {
+        color: $BaseColor;
+        font-weight: bold;
+        font-size: 15px;
+    }
+
 
 
     .login-main {
