--- a/src/pages/Admin/DashApps/DashApps.scss
+++ b/src/pages/Admin/DashApps/DashApps.scss
@@ -1,4 +1,4 @@
-@use '../../../helpers/functions' as *;
+@use "../../../helpers/functions" as *;
 
 .AppControl {
     margin-left: 150px;
@@ -10,9 +10,15 @@
     }
 
     nav {
-        padding: 10px 0;
+        padding: 10px;
         box-shadow: 0px 0px 6px 0px $BaseColor;
         background-color: white;
+        width: 90%;
+        padding: 1px;
+        margin: 10px auto;
+        display: block;
+        align-items: center;
+        border-radius: 50px;
 
         a {
             text-decoration: none;
