--- a/src/components/DashSideNav/DashSideNav.scss
+++ b/src/components/DashSideNav/DashSideNav.scss
@@ -49,6 +49,7 @@
         left: 10px;
         bottom: 40px;
         width: 80% !important;
+        cursor: pointer;
 
         &:hover {
             background-color: $BaseColor;
