--- a/src/helpers/_functions.scss
+++ b/src/helpers/_functions.scss
@@ -3,21 +3,15 @@
         @media (max-width: 767px) {
             @content;
         }
-    }
-
-    @else if $point ==small {
+    } @else if $point ==small {
         @media (min-width: 768px) and (max-width: 991px) {
             @content;
         }
-    }
-
-    @else if $point ==medium {
+    } @else if $point ==medium {
         @media (min-width: 992px) and (max-width: 1199px) {
             @content;
         }
-    }
-
-    @else if $point ==large {
+    } @else if $point ==large {
         @media (min-width: 1200px) {
             @content;
         }
@@ -30,7 +24,7 @@
 
 $BaseColor: #30a27b;
 
-$FreeColor: #1E5744;
+$FreeColor: #1e5744;
 
 $SecondColor: #d1e8df;
 
