--- a/src/pages/Admin/DashAdmins/DashAmin.scss
+++ b/src/pages/Admin/DashAdmins/DashAmin.scss
@@ -1,11 +1,24 @@
-@use '../../../helpers/functions' as *;
+@use "../../../helpers/functions" as *;
 
 .AdminControl {
     margin-left: 150px;
-    box-shadow: 0px 0px 6px 0px $BaseColor;
+    background-color: #d3e8df;
+    padding: 10px;
+    .Active {
+        background-color: $BaseColor;
+        color: white;
+    }
 
     nav {
-        padding: 10px 0;
+        padding: 5px !important;
+        box-shadow: 0px 0px 6px 0px $BaseColor;
+        background-color: white;
+        width: 90%;
+        padding: 1px;
+        margin: 10px auto 1px auto;
+        display: block;
+        align-items: center;
+        border-radius: 50px;
 
         a {
             text-decoration: none;
