--- a/src/components/AppsCrud/UpdateImage/UpdateImage.scss
+++ b/src/components/AppsCrud/UpdateImage/UpdateImage.scss
@@ -20,6 +20,7 @@
         @include Breakpoints(mobile) {
             text-align: center;
         }
+
         img {
             width: 100px;
             border-radius: 20px;
@@ -36,9 +37,15 @@
             padding-top: 4px;
             text-align: center;
             cursor: pointer;
+            @include Animtation(0.5s, linear, all);
+
+            &:hover {
+                background-color: rgba($BaseColor, 0.8);
+            }
         }
     }
 }
+
 .popup {
     width: 100%;
     height: 100vh;
@@ -47,6 +54,7 @@
     top: 0;
     left: 0;
     z-index: 1;
+
     .form {
         position: absolute;
         transform: translate(50%, 50%);
@@ -57,31 +65,37 @@
         text-align: center;
         padding: 20px;
         z-index: 9999;
+
         input {
             border: 2px solid #ccc;
             padding: 10px;
             font-size: 16px;
+
             &:focus {
                 border-color: $BaseColor;
                 box-shadow: 0 0 5px $BaseColor;
                 outline: none;
             }
         }
+
         svg {
             position: relative;
             right: -47%;
             font-size: 25px;
             color: $BaseColor;
+            cursor: pointer;
         }
+
         label {
             color: $BaseColor;
             margin-bottom: 5px;
         }
+
         button {
-            margin-top: 3px;
+            margin-top: 5px;
             color: white;
-            background-color: $BaseColor;
-            padding: 10px;
+            background-color: #30a27b;
+            padding: 10px 100px;
             border-radius: 5px;
         }
     }
