--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -13,6 +13,7 @@
         height: 320px;
         background-color: $BaseColor;
         border-radius: 10px;
+        object-fit: cover;
     }
 
     .slick-arrow.slick-prev.slick-disabled {
