--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@use './helpers/functions' as *;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +7,20 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  &::-webkit-scrollbar {
+    width: 14px;
+  }
+
+  /* Track */
+  &::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    background: $BaseColor;
+  }
 }
 
 code {
@@ -19,4 +35,15 @@ code {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+
+  @include Breakpoints(mobile) {
+    height: max-content;
+  }
+
+  img {
+    @include Breakpoints(mobile) {
+      width: 100%;
+    }
+
+  }
 }
