--- a/src/components/AdminsCrud/AddAdmin/AddAdmin.scss
+++ b/src/components/AdminsCrud/AddAdmin/AddAdmin.scss
@@ -5,6 +5,18 @@
     margin-left: 150px;
     padding: 10px;
 
+    @include Breakpoints(medium) {
+        margin-left: 0;
+    }
+
+    @include Breakpoints(small) {
+        margin-left: 0;
+    }
+
+    @include Breakpoints(mobile) {
+        margin-left: 0;
+    }
+
     form {
         h1 {
             margin-left: 30% !important;
