--- a/src/components/AdminsCrud/DeleteAdmin/Deleteadmin.scss
+++ b/src/components/AdminsCrud/DeleteAdmin/Deleteadmin.scss
@@ -6,6 +6,18 @@
     margin-left: 150px;
     padding: 10px;
 
+    @include Breakpoints(medium) {
+        margin-left: 0;
+    }
+
+    @include Breakpoints(small) {
+        margin-left: 0;
+    }
+
+    @include Breakpoints(mobile) {
+        margin-left: 0;
+    }
+
     .admin {
         width: 40%;
         margin: 40px auto 15px auto;
@@ -15,6 +27,18 @@
         align-items: center;
         box-shadow: 9px 10px 12px $BaseColor;
         padding: 20px 0px;
+
+        @include Breakpoints(medium) {
+            width: 500px;
+        }
+
+        @include Breakpoints(small) {
+            width: 500px;
+        }
+
+        @include Breakpoints(mobile) {
+            width: 90%;
+        }
     }
 
     .deletespan {
