--- a/src/components/AppsCrud/UpdateImage/UpdateImage.scss
+++ b/src/components/AppsCrud/UpdateImage/UpdateImage.scss
@@ -46,14 +46,14 @@
     }
 }
 
-.popup {
+.popupUpdateImage {
     width: 100%;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.132);
+    background-color: rgb(0 0 0 / 6%);
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 5;
 
     .form {
         position: absolute;
@@ -65,6 +65,21 @@
         text-align: center;
         padding: 20px;
         z-index: 9999;
+
+        @include Breakpoints(medium) {
+            transform: translate(10px, 50%);
+            width: 90%;
+        }
+
+        @include Breakpoints(small) {
+            transform: translate(10px, 50%);
+            width: 90%;
+        }
+
+        @include Breakpoints(mobile) {
+            transform: translate(10px, 50%);
+            width: 90%;
+        }
 
         input {
             border: 2px solid #ccc;
