--- a/src/components/AppsCrud/AddApp/AddApp.scss
+++ b/src/components/AppsCrud/AddApp/AddApp.scss
@@ -50,7 +50,7 @@
         margin: auto;
 
         &:hover {
-            background-color: $BaseColor;
+            background-color: rgba($BaseColor, 0.8);
             color: white;
         }
     }
